--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@apollo/client": "^3.13.8",
     "@nuxtjs/apollo": "^5.0.0-alpha.14",
+    "@vue/apollo-composable": "^4.2.2",
     "graphql": "^16.11.0",
     "nuxt": "^3.17.5",
     "vee-validate": "^4.15.1",
